<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>connect_plugins</name>
  <version>1.0.0</version>
  <description>Plugins for the ROS2 "connect" node</description>
  <maintainer email="daniel.schott@uni-wuerzburg.de">Daniel Schott</maintainer>
  <license>MPLv2</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  
  <depend>connect</depend>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
